fixed numbering duplicates

--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -84,13 +84,13 @@ The purpose of these activities is to ensure the system requirements agree with 
 start with a review of the system, a description of the testing plan, and a list of tests to be completed.
 
 
-  \section{2 General Information}
+  \section{General Information}
 
-  \subsection{2.1 Summary} \cite{Problem_Statement}
+  \subsection{Summary} \cite{Problem_Statement}
   
   Orbit Watch is an online platform developed by OKKM Insights to streamline and simplify satellite imagery data analysis. The software addresses the scarcity of high-quality, labeled satellite imagery datasets tailored for specific use cases across various industries such as disaster response, environmental monitoring, urban planning, and defense. Leveraging an AI-powered crowd-sourcing model, Orbit Watch enables users to label commercially available satellite images. These labeled datasets are then utilized to train custom computer vision models, enhancing accuracy and efficiency in image analysis. The platform offers a paid service for identifying objects within satellite images and distributes earnings to users who contribute to the labeling efforts.
   
-  \subsection{2.2 Objectives} \cite{Problem_Statement}
+  \subsection{Objectives} \cite{Problem_Statement}
   
   The primary objectives of the Verification and Validation (V\&V) plan for Orbit Watch are:
   
@@ -106,7 +106,7 @@ start with a review of the system, a description of the testing plan, and a list
       \item \textbf{Stretch Goals}: Objectives related to automatic data labeling and multi-source integration are considered stretch goals and will not be included in the current V\&V efforts due to time and resource constraints.
   \end{itemize}
   
-  \subsection{2.3 Challenge Level and Extras}\cite{Development_Plan} \cite{Problem_Statement}
+  \subsection{Challenge Level and Extras}\cite{Development_Plan} \cite{Problem_Statement}
   
   \, \, \, We aim to classify this project as an advanced level project. \\
 
@@ -129,7 +129,7 @@ start with a review of the system, a description of the testing plan, and a list
     \item \textbf{Formal Proof of Convergence for Labeled Images}: This proof aims to establish that labeled images converge toward a standard of accuracy and consistency. This involves statistical or mathematical validation showing that repeated labeling by different users (or with the assistance of AI) leads to a stable and reliable dataset over time. Proving convergence is crucial in ensuring that the labeling quality remains high, even as new users interact with the platform. This might include metrics such as inter-annotator agreement or AI confidence scores, contributing to the credibility and reliability of the labeled dataset.
 \end{itemize}
   
-\subsection{2.4 Relevant Documentation}
+\subsection{Relevant Documentation}
 
 \bigskip
 Created BibTeX entries for our documents and within those entries we have included a hyperlink to the documents. As listed above. Here is a sample of the references for all of the documents. Future references are also included in this sample. \\
