removed additional references

--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -132,18 +132,8 @@ start with a review of the system, a description of the testing plan, and a list
 \subsection{Relevant Documentation}
 
 \bigskip
-Created BibTeX entries for our documents and within those entries we have included a hyperlink to the documents. As listed above. Here is a sample of the references for all of the documents. Future references are also included in this sample. \\
 
-\begin{itemize}
-    \item Development Plan - \cite{Development_Plan}
-    \item Module Guide - \cite{MG}
-    \item Module Interface Specification - \cite{MIS}
-    \item Verification and Validation Plan - \cite{VnV}
-    \item Problem Statement - \cite{Problem_Statement}
-    \item Software Requirements Specification - \cite{SRS}
-\end{itemize}
-
-By referencing these documents, we ensure that our V\&V efforts are comprehensive and aligned with the project's goals and requirements. Each document provides specific insights that help us design effective verification and validation activities:
+The following are BibTeX entries for our documents. Future references are also included in this sample. By referencing these documents, we ensure that our V\&V efforts are comprehensive and aligned with the project's goals and requirements. Each document provides specific insights that help us design effective verification and validation activities:
 
 \begin{itemize}
     \item \textbf{Problem Statement} (\cite{Problem_Statement}): Outlines the core challenges and objectives of the Orbit Watch project, providing context and motivation for development. It helps align our V\&V activities with the original goals and ensures that the software addresses the identified needs.
