added hazard analysis reference and desc

--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -139,6 +139,8 @@ The following are BibTeX entries for our documents. Future references are also i
     \item \textbf{Problem Statement} (\cite{Problem_Statement}): Outlines the core challenges and objectives of the Orbit Watch project, providing context and motivation for development. It helps align our V\&V activities with the original goals and ensures that the software addresses the identified needs.
 
     \item \textbf{Development Plan} (\cite{Development_Plan}): Details the project timeline, milestones, and resource allocation. It assists in scheduling V\&V activities appropriately within the development lifecycle, ensuring they are integrated at optimal points for maximum effectiveness.
+    
+    \item \textbf{Hazard Analysis} (\cite{Hazard_Analysis}): Identifies, analyzes and proposes mitigation strategies for potential hazards that could occur within the application. The document underscores the importance of proactive risk management in maintaining the platform's reliability, security, and user satisfaction.
 
     \item \textbf{Software Requirements Specification (SRS)} (\cite{SRS}): Defines all functional and non-functional requirements of Orbit Watch. It serves as the foundation for developing test cases to verify that the software meets all specified requirements and performs as intended.
 
