--- a/docs/VnVPlan/references.bib
+++ b/docs/VnVPlan/references.bib
@@ -45,3 +45,11 @@
   year = {2024},
   note = {\url{https://example.com/mis}}
 }
+
+@techreport{Hazard_Analysis,
+  author = {OrbitWatch},
+  title = {Hazard Analysis},
+  institution = {McMaster University},
+  year = {2024},
+  note = {\url{https://github.com/OKKM-insights/OKKM.insights/blob/main/docs/HazardAnalysis/HazardAnalysis.pdf}}
+}
