Added QSA details

--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -1947,17 +1947,19 @@ How test will be performed: Tester will check that the language selection list i
 
 \begin{enumerate}
 
-\item{Compliant Payment Process: T-CO0\\}
+    \item{Compliant Payment Process: T-CO0\\}
 
-Type: Manual, Static
-					
-Initial State: Application is deployed.
-					
-Input/Condition: Qualified Security Assessor (QSA) assesses the application.
-					
-Output/Result: They determine that it meets the PCI-DSS standard.
-					
-How test will be performed: A QSA will be found and contacted to perform an assessment. The QSA will be shown all parts of the application that deal will financial transactions and will be able to make a determination on if it meets the standard.
+    Type: Manual, Static
+                        
+    Initial State: Application is deployed.
+                        
+    Input/Condition: A security organization that has been qualified by the PCI Security Standards Council, known as a Qualified Security Assessor (QSA), assesses the application.
+                        
+    Output/Result: They determine that it meets the PCI-DSS standard.
+                        
+    How test will be performed: A QSA will be found and contacted to perform an assessment. All the details of qualified QSA companies can be found \href{https://listings.pcisecuritystandards.org/assessors_and_solutions/qualified_security_assessors}{here}. 
+    This meeting will be arranged before the application is publicly released. The QSA will be shown all parts of the application that deal will financial transactions and will be able to make a determination on if it meets the standard.
+
 \end{enumerate}
 		
 \paragraph{Legal Tests}
